add jib plugin support