@@ -3,9 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.7.RELEASE</version>
+        <groupId>io.github.lanen</groupId>
+        <artifactId>spring-boot-parent</artifactId>
+        <version>${revision}</version>
+        <relativePath>../../spring-boot-project/spring-boot-parent</relativePath>
     </parent>
     <groupId>io.github.lanen</groupId>
     <artifactId>zuul-server</artifactId>
@@ -15,10 +16,9 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Greenwich.SR2</spring-cloud.version>
+        <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
         <maven.deploy.skip>true</maven.deploy.skip>
         <maven.javadoc.skip>true</maven.javadoc.skip>
-
     </properties>
 
     <dependencies>
@@ -58,6 +58,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
@@ -93,6 +98,44 @@
                         <format>xml</format>
                     </formats>
                     <check />
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>1.8.0</version>
+                <configuration>
+                    <from>
+                        <image>adoptopenjdk/openjdk11:alpine-jre</image>
+                    </from>
+                    <to>
+                        <image>registry.cn-shenzhen.aliyuncs.com/jiayi/zuul-server</image>
+                        <credHelper>osxkeychain</credHelper>
+                        <tags>
+                            <tag>${project.version}</tag>
+                            <tag>latest</tag>
+                        </tags>
+                    </to>
+                    <container>
+                        <jvmFlags>
+                            <jvmFlag>-Xms512m</jvmFlag>
+
+                            <jvmFlag>--add-opens</jvmFlag>
+                            <jvmFlag>java.base/java.util=ALL-UNNAMED</jvmFlag>
+
+                            <jvmFlag>--add-opens</jvmFlag>
+                            <jvmFlag>java.base/java.lang.reflect=ALL-UNNAMED</jvmFlag>
+
+                            <jvmFlag>--add-opens</jvmFlag>
+                            <jvmFlag>java.base/java.text=ALL-UNNAMED</jvmFlag>
+
+                        </jvmFlags>
+                        <mainClass>com.buyou.zuul.ZuulServer</mainClass>
+                        <ports>
+                            <port>3030</port>
+                        </ports>
+                    </container>
                 </configuration>
             </plugin>
         </plugins>
